Testing out a possible fix to the mobile anchor link overflow scrollbar issue.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,6 +12,7 @@ section{
   padding-right: 160px;
   padding-bottom: 64px;
   overflow-x: auto;
+  margin-top: 2px;
   height: calc(100vh - 116px);
 }
 
